--- a/qcore/controller/forms/qboolropropertyform.ui
+++ b/qcore/controller/forms/qboolropropertyform.ui
@@ -53,7 +53,7 @@
         </size>
        </property>
        <property name="text">
-        <string>upd</string>
+        <string>Upd</string>
        </property>
       </widget>
      </item>
