--- a/qcore/controller/forms/qboolrwpropertyform.ui
+++ b/qcore/controller/forms/qboolrwpropertyform.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>133</width>
-    <height>28</height>
+    <width>253</width>
+    <height>29</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,7 +47,7 @@
         </size>
        </property>
        <property name="text">
-        <string>upd</string>
+        <string>Upd</string>
        </property>
       </widget>
      </item>
