--- a/qcore/controller/forms/qintropropertyform.ui
+++ b/qcore/controller/forms/qintropropertyform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>166</width>
-    <height>28</height>
+    <height>29</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,7 +53,7 @@
         </size>
        </property>
        <property name="text">
-        <string>upd</string>
+        <string>Upd</string>
        </property>
       </widget>
      </item>
