--- a/qcore/controller/forms/qintrwpropertyform.ui
+++ b/qcore/controller/forms/qintrwpropertyform.ui
@@ -66,7 +66,7 @@
         </size>
        </property>
        <property name="text">
-        <string>upd</string>
+        <string>Upd</string>
        </property>
       </widget>
      </item>
